2018-08-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c ("QuantumTransferMode"): CIE Log images with an
	alpha channel are not supported.  Fixes oss-fuzz 10013
	"graphicsmagick/coder_TIFF_fuzzer: Use-of-uninitialized-value in
	DisassociateAlphaRegion". (Credit to OSS-Fuzz)

	* magick/render.c (DrawImage): SetImageAttribute() appends new
	text to any existing value, leading to every increasing memory
	consumption if the existing value is not deleted first by the
	unwary.  Fixes oss-fuzz 9983 "graphicsmagick/coder_MVG_fuzzer:
	Timeout in graphicsmagick_coder_MVG_fuzzer" and oss-fuzz 10016
	"graphicsmagick/coder_MVG_fuzzer: Out-of-memory in
	graphicsmagick_coder_MVG_fuzzer". (Credit to OSS-Fuzz)

	* magick/utility.c (TranslateTextEx): Fix off-by-one in loop
	bounds check which allowed a one-byte stack write overflow.  Fixes
	oss-fuzz 10055 "graphicsmagick/coder_MVG_fuzzer:
	Stack-buffer-overflow in TranslateTextEx". (Credit to OSS-Fuzz)

	* magick/render.c (DrawImage): Be more precise about error
	detection and reporting, and return from an error more quickly.
	Also added MAX_DRAWIMAGE_RECURSION pre-processor definition to
	allow adjusting the drawing recursion limit.  The drawing
	recursion limit is still 100, which seems exceptionally generous.

	* magick/constitute.c (WriteImage): Produce a more useful error
	message if an encoding delegate is not available.

	* magick/nt_base.h (isnan): Try adding a MSVC replacement for
	missing isnan() function.  Not yet tested.

2018-08-25  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c This should fix intentional 64 bit file offset
	overflow as depictedin OSS-fuzz-9936. Thanks to OSS-Fuzz.

2018-08-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (ConvertPrimitiveToPath): Need to enlarge
	PathInfo array allocation to avoid possible heap write overflow.
	Fixes oss-fuzz 9651 "graphicsmagick/coder_MVG_fuzzer:
	Heap-buffer-overflow in ConvertPrimitiveToPath". (Credit to