@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180825"
-#define public MagickPackageReleaseDate "snapshot-20180825"
+#define public MagickPackageVersionAddendum ".020180829"
+#define public MagickPackageReleaseDate "snapshot-20180829"
